k8s/app/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: memory
